# sorting

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: main.c  profiler_main.c  tests_main.c
